Add getExpectedWaitTime and getRecommendedFee methods to mempool
